--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "graphql-request": "^1.8.2",
+    "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.0",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
