--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/ioredis": "^3.2.14",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
     "@types/uuid": "^3.4.3",
@@ -24,6 +25,7 @@
     "graphql-request": "^1.8.2",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.0",
+    "ioredis": "^3.2.2",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "typeorm": "0.2.7",
