--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/express": "^4.16.0",
     "@types/ioredis": "^3.2.14",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
@@ -20,7 +21,9 @@
     "typescript": "3.0.1"
   },
   "dependencies": {
+    "@gql2ts/from-schema": "^1.8.2",
     "bcryptjs": "^2.4.3",
+    "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "graphql-request": "^1.8.2",
@@ -37,7 +40,7 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+    "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
     "globalSetup": "./src/testSetup/callSetup.js",
