--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
     "@types/node-fetch": "^2.1.2",
+    "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.3",
     "@types/yup": "^0.24.7",
     "gql2ts": "^1.8.2",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@gql2ts/from-schema": "^1.8.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
@@ -33,6 +35,7 @@
     "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
+    "sparkpost": "^2.1.2",
     "typeorm": "0.2.7",
     "uuid": "^3.3.2",
     "yup": "^0.26.2"
