Add login. Add login tests

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -9,6 +9,7 @@
     "database": "graphql-ts",
     "synchronize": true,
     "logging": true,
+    "dropSchema": false,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
