--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.1",
+    "@types/connect-redis": "^0.0.7",
     "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.10",
     "@types/ioredis": "^3.2.14",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
@@ -23,9 +25,12 @@
   },
   "dependencies": {
     "@gql2ts/from-schema": "^1.8.2",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.3.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "graphql": "^0.13.2",
     "graphql-import": "^0.6.0",
     "graphql-request": "^1.8.2",
@@ -42,7 +47,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --runInBand",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
